@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-20T08:21:14Z",
+  "timestamp" : "2022-04-21T08:20:03Z",
   "count_outdated" : 246,
   "uniques_outdated" : 126,
-  "count" : 258,
-  "uniques" : 136,
+  "count" : 259,
+  "uniques" : 137,
   "clones" : [
     {
       "timestamp": "2022-04-07T00:00:00Z",
@@ -32,6 +32,13 @@
       "count_minmax": [ 2, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-04-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
