@@ -1,5 +1,5 @@
 {
-  "count": 12,
+  "count": 13,
   "uniques": 8,
   "clones": [
     {
@@ -21,6 +21,11 @@
       "timestamp": "2022-04-20T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-04-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
